--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.2.4"
   }
 }
